--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.thiiozz</groupId>
-	<artifactId>swellalert</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>WindguruForecastApi</artifactId>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>swellalert</name>
-	<description>Demo project for Spring Boot</description>
+	<name>WindguruForecastApi</name>
+	<description>Windguru scrapping API</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
